--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Portifólio</title>
-    <link rel="icon" href="./Icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="Images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
+    <link rel="manifest" href="Images/site.webmanifest">
+    <title>Portfólio</title>
 </head>
 
 <body>
+    <!-- div container (está toda a estrutura) -->
+    <div class="container">
+        <header>
+            <div class="imgWrapper">
+                <img src="./Images/bg.jpg" alt="imageBackground">
+                <!-- img lateral direita -->
+                <div class="imgLateral">
+                    <img src="./Images/img1.png" alt="imagebg">
+                </div>
+                <div class="img2">
+                    <img src="./Images/img2.png" alt="">
+                </div>
+                <!-- a div banner eh onde fica o conteudo encima da img bg -->
+                <div class="banner">
+                    <h1>Front End Developer</h1>
+                    <p>Otavio Sopran</p>
+                    <button>Saiba mais</button>
+                </div>
+            </div>
+        </header>
+    </div>
 
 </body>
 
