--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 <body>
     <!-- div container (está toda a estrutura) -->
     <div class="container">
+        <!-- div do menu lateral estilo hamburguer -->
+        <div class="hamburguer">
+            <!-- essas divs tao com class porque serao todas com o mesmo estilo e com id para fazer ofeito com JS -->
+            <div class="line" id="line1"></div>
+            <div class="line" id="line2"></div>
+            <div class="line" id="line3"></div>
+            <!-- esse span eh p/ o efeito de fechar aba criado com o JS -->
+            <span>fechar</span>
+        </div>
         <header>
             <div class="imgWrapper">
+                <div class="menuBurguer">menu</div>
                 <img src="./Images/bg.jpg" alt="imageBackground">
                 <!-- img lateral direita -->
                 <div class="imgLateral">
@@ -33,8 +43,27 @@
                 </div>
             </div>
         </header>
+        <!-- menu da div hamburguer -->
+        <div class="sidebar">
+            <nav>
+                <ul class="menu">
+                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                </ul>
+            </nav>
+            <!-- icons das redes sociais -->
+            <div class="socialMedia">
+                <!-- essas class sao icons do site fontawesome.com associados ao segundo link no CSS -->
+                <a href=""><i class="fab fa-github-square"></i></a>
+                <a href=""><i class="fab fa-instagram-square"></i></a>
+                <a href=""><i class="fab fa-blogger"></i></a>
+            </div>
+        </div>
     </div>
-
+    <script src="./JS/javascript.js"></script>
 </body>
 
 </html>
